# Autonomous-Agentic-Email-RAG-workflow

./: .gitignore  README.md  agent_memory.db  ingest.py  main.py  pyproject.toml  rag_working_test.py  requirements.txt
nodes/: agent_state.py  analyzer_node.py  database.py  debug_content.txt  email_services.py  gmail_reader_node.py  llm_node.py  log_ignore_node.py  response_generator_node.py  retriever_node.py  sender_reply_node.py  workflow.py
